Fixed visible gap

--- a/src/components/FancyHeading/FancyHeading.css
+++ b/src/components/FancyHeading/FancyHeading.css
@@ -4,8 +4,8 @@
     width: 70%;
     padding-top: 1%;
     padding-bottom: 1%;
-    padding-left: 3vw;
-    margin-left: -3vw;
+    padding-left: 5vw;
+    margin-left: -5vw;
     transform: skew(20deg);
 }
 
